# qudits

./: .gitignore  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build_docs.sh  noxfile.py  pyproject.toml
.eleven_test/: pyvenv.cfg
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  codecov.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cd.yml  ci.yml  release-drafter.yml  templating.yml  update-mqt-core.yml
bindings/: CMakeLists.txt  bindings.cpp
cmake/: ExternalDependencies.cmake
docs/: ai_usage.md  conf.py  contributing.md  index.md  installation.md  references.md  refs.bib  sparse_simulators.md  tooling.md  tutorial.md
docs/_templates/: page.html
examples/: yaqssim_example.py
include/dd/: Complex.hpp  ComplexCache.hpp  ComplexNumbers.hpp  ComplexTable.hpp  ComplexValue.hpp  ComputeTable.hpp  Control.hpp  Definitions.hpp  Edge.hpp  GateMatrixDefinitions.hpp  MDDPackage.hpp  UnaryComputeTable.hpp  UniqueTable.hpp
python/mqt/qudits/: __init__.py  _version.py
python/mqt/qudits/_qudits/: __init__.pyi  misim.pyi
python/mqt/qudits/compiler/: __init__.py  compiler_pass.py  dit_compiler.py
python/mqt/qudits/compiler/compilation_minitools/: __init__.py  local_compilation_minitools.py  naive_unitary_verifier.py  numerical_ansatz_utils.py
python/mqt/qudits/compiler/naive_local_resynth/: __init__.py  local_resynth.py
python/mqt/qudits/compiler/onedit/: __init__.py
python/mqt/qudits/compiler/onedit/local_operation_swap/: __init__.py  swap_routine.py
python/mqt/qudits/compiler/onedit/local_phases_transpilation/: __init__.py  propagate_virtrz.py  remove_phase_rotations.py
python/mqt/qudits/compiler/onedit/mapping_aware_transpilation/: __init__.py  phy_local_adaptive_decomp.py  phy_local_qr_decomp.py
python/mqt/qudits/compiler/onedit/mapping_un_aware_transpilation/: __init__.py  log_local_adaptive_decomp.py  log_local_qr_decomp.py
python/mqt/qudits/compiler/state_compilation/: retrieve_state.py  state_preparation.py
python/mqt/qudits/compiler/twodit/: __init__.py
python/mqt/qudits/compiler/twodit/blocks/: crot.py  czrot.py  pswap.py
python/mqt/qudits/compiler/twodit/entanglement_qr/: __init__.py  log_ent_qr_cex_decomp.py  phy_ent_qr_cex_decomp.py
python/mqt/qudits/core/: __init__.py  dfs_tree.py  lanes.py  level_graph.py  micro_dd.py
python/mqt/qudits/exceptions/: __init__.py  backenderror.py  circuiterror.py  compilerexception.py  joberror.py
python/mqt/qudits/quantum_circuit/: __init__.py  circuit.py  gate.py  qasm.py
python/mqt/qudits/quantum_circuit/components/: __init__.py  classic_register.py  quantum_register.py
python/mqt/qudits/quantum_circuit/components/extensions/: controls.py  (+2 more)
python/mqt/qudits/quantum_circuit/gates/: __init__.py  csum.py  custom_multi.py  custom_one.py  custom_two.py  cx.py  gellmann.py  h.py  ls.py  ms.py  noise_x.py  noise_y.py  perm.py  r.py  randu.py  rh.py  rx.py  rz.py  rzz.py  s.py  virt_rz.py  x.py  z.py
python/mqt/qudits/simulation/: __init__.py  qudit_provider.py  save_info.py
python/mqt/qudits/simulation/backends/: __init__.py  backendv2.py  innsbruck_01.py  misim.py  sparse_statevec_sim.py  sparse_unitary_sim.py  stochastic_sim.py  tnsim.py  yaqssim.py
python/mqt/qudits/simulation/jobs/: __init__.py  job.py  job_result.py  jobstatus.py
python/mqt/qudits/simulation/noise_tools/: __init__.py  noise.py  noisy_circuit_factory.py
python/mqt/qudits/visualisation/: __init__.py  drawing_routines.py  mini_quantum_information.py  plot_information.py
src/: CMakeLists.txt
src/mqt/qudits/compiler/state_compilation/: state_preparation.py
src/mqt/qudits/quantum_circuit/: circuit.py  gate.py  qasm.py
src/mqt/qudits/quantum_circuit/gates/: __init__.py  rzz.py
src/mqt/qudits/simulation/: qudit_provider.py
src/mqt/qudits/simulation/backends/: __init__.py  sparse_statevec_sim.py  sparse_unitary_sim.py  stochastic_sim.py
src/mqt/qudits/simulation/noise_tools/: noisy_circuit_factory.py
test/: CMakeLists.txt  data_collect.cpp  main.cpp  test_pkg.cpp
test/python/_qudits/: test_pymisim.py
test/python/compiler/: test_dit_compiler.py
test/python/compiler/compilation_minitools/: test_local_compilation_minitools.py  test_naive_unitary_verifier.py
test/python/compiler/data_deb/: CUo3_NyUw.npy  CUo3_ktzT.npy  CUo4_SWJL.npy  CUo4_vFPp.npy  CUo5_LByK.npy  CUo5_UEKb.npy  CUt[3, 4]_rsaq.npy  CUt[3, 5]_hkSV.npy  CUt[4, 3]_Dacf.npy  CUt[4, 5]_SJsK.npy  CUt[5, 3]_VidX.npy  circuit.qasm  circuit_extract.qasm
test/python/compiler/naive_local_resynth/: test_local_resynth.py
test/python/compiler/onedit/: test_log_local_qr_decomp.py  test_phy_local_adaptive_decomp.py  test_phy_local_qr_decomp.py  test_propagate_virtrz.py  test_remove_phase_rotations.py  test_swap_routine.py
test/python/compiler/state_compilation/: test_retrieve_state.py  test_state_preparation.py
test/python/compiler/twodit/entangled_qr/: test_crot.py  test_czrot.py  test_entangled_qr.py  test_pswap.py
test/python/compiler/twodit/variational_twodit_compilation/: test_ansatz_solve_n_search.py  test_sparsifier.py
test/python/core/: test_dfs_tree.py  test_lanes.py  test_level_graph.py  test_micro_dd.py
test/python/qudits_circuits/: test_circuit.py  test_qasm.py
test/python/qudits_circuits/components/: test_matrix_factory.py
test/python/qudits_circuits/gate_set/: test_csum.py  test_custom_multi.py  test_custom_one.py  test_custom_two.py  test_cx.py  test_gellman.py  test_h.py  test_ls.py  test_ms.py  test_noisex.py  test_noisey.py  test_perm.py  test_r.py  test_randu.py  test_rh.py  test_rz.py  test_s.py  test_virtrz.py  test_x.py  test_z.py
test/python/simulation/: test_backends.py  test_endianness.py  test_misim.py  test_sparse_gpu_compatibility.py  test_sparse_noise.py  test_sparse_statevec_sim.py  test_sparse_unitary_sim.py  test_tnsim.py  test_yaqssim.py
test/python/simulation/noise_tools/: test_noise_tools_mathematical.py  test_noise_tools_physical.py
(+21 files in other folders)
